fix: align styling with resume

--- a/css/global.css
+++ b/css/global.css
@@ -1,30 +1,32 @@
 html {
     background-color: #FFFFFF;
-    color: #515151;
+    color: #000000;
 }
 body {
     display: flex;
-    font-family: 'DejaVuSansBook', Arial, Sans-serif;
+    font-family: Graphik, sans-serif;
     margin: 0;
     padding: 200px 0 50px;
 }
 h1 {
-    font-size: 200%;
+    font-size: 20px;
     margin: 0;
 }
 a {
-    color: #00B4FF;
+    color: #3182CE;
 }
 
 #home-title-wrapper {
-    width: 33%;
+    width: 40%;
 }
 #home-title {
-    background-color: #515151;
+    align-items: center;
+    background-color: #171923;
     color: #FFFFFF;
+    display: flex;
     font-weight: bold;
-    padding: 20px;
-    text-align: right;
+    justify-content: flex-end;
+    padding: 10px 20px;
 }
 
 #home-nav {
@@ -38,9 +40,10 @@ a {
     list-style-type: none;
 }
 .home-nav-item a {
-    display: block;
-    font-size: 200%;
-    padding: 20px;
+    align-items: center;
+    display: flex;
+    font-size: 20px;
+    padding: 10px 20px;
     text-decoration: none;
 }
 .home-nav-item a:before {
@@ -49,8 +52,7 @@ a {
 }
 .home-nav-item a:hover,
 .home-nav-item a:focus {
-    background-color: #00B4FF;
-    border-right: 10px solid #515151;
+    background-color: #3182CE;
     color: #FFFFFF;
     outline: none;
 }
